[gd_scene load_steps=6 format=3 uid="uid://dq0cttsvnw3ye"]

[ext_resource type="Script" path="res://scripts/customer.gd" id="1_fesl2"]
[ext_resource type="PackedScene" uid="uid://bjc8hh2jur0or" path="res://scenes/speech_bubble.tscn" id="3_cievq"]
[ext_resource type="Script" path="res://interactable/CustomerBody.gd" id="4_3ec62"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_wi8kg"]
radius = 0.4

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_bo1v6"]
radius = 0.4

[node name="Customer" type="PathFollow3D"]
rotation_mode = 1
script = ExtResource("1_fesl2")

[node name="BodyMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_wi8kg")

[node name="SpeechBubble" parent="." instance=ExtResource("3_cievq")]

[node name="Body" type="StaticBody3D" parent="."]
collision_layer = 7
collision_mask = 3
script = ExtResource("4_3ec62")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Body"]
shape = SubResource("CapsuleShape3D_bo1v6")

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.57)
target_position = Vector3(0, 0, 0.65)
collision_mask = 4
collide_with_areas = true

[node name="WaitTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="timeout" from="WaitTimer" to="." method="_on_wait_timer_timeout"]
